--- a/week1/index.html
+++ b/week1/index.html
@@ -4,182 +4,173 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Titanic EDA Dashboard</title>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <title>Titanic Dataset EDA</title>
+    <!-- Plotly.js via CDN -->
+    <script src="https://cdn.plot.ly/plotly-2.32.0.min.js"></script>
+    <!-- PapaParse for CSV parsing -->
+    <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
     <style>
         :root {
-            --bg-primary: #121212;
-            --bg-card: #1e1e1e;
-            --text-primary: #f0f0f0;
-            --text-secondary: #b0b0b0;
-            --border-color: #333;
-            --button-bg: #1f6feb;
-            --button-hover: #3a86ff;
+            --bg-color: #1e1e1e;
+            --text-color: #f0f0f0;
+            --card-bg: #2d2d2d;
+            --border-color: #444;
+            --button-bg: #4CAF50;
+            --button-hover: #45a049;
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            background-color: var(--bg-color);
+            color: var(--text-color);
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
             margin: 0;
             padding: 20px;
-            background-color: var(--bg-primary);
-            color: var(--text-primary);
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
         }
 
         h1,
         h2,
         h3 {
-            color: var(--text-primary);
+            color: #a0e75a;
         }
 
-        .container {
-            max-width: 1200px;
-            margin: auto;
-        }
-
-        .card {
-            background: var(--bg-card);
-            padding: 20px;
-            margin: 16px 0;
-            border-radius: 10px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+        .section {
+            background: var(--card-bg);
             border: 1px solid var(--border-color);
+            border-radius: 8px;
+            padding: 20px;
+            margin-bottom: 25px;
+        }
+
+        input[type="file"] {
+            margin: 10px 0;
+            color: var(--text-color);
         }
 
         button {
-            margin: 8px 8px 8px 0;
-            padding: 10px 16px;
-            background: var(--button-bg);
+            background-color: var(--button-bg);
             color: white;
             border: none;
-            border-radius: 6px;
+            padding: 10px 16px;
+            margin: 5px;
+            border-radius: 4px;
             cursor: pointer;
             font-weight: bold;
         }
 
         button:hover {
-            background: var(--button-hover);
+            background-color: var(--button-hover);
         }
 
-        input[type="file"] {
-            margin: 8px 0;
-            color: var(--text-primary);
-        }
-
-        pre,
         table {
             width: 100%;
             border-collapse: collapse;
-            margin-top: 10px;
-            color: var(--text-primary);
+            margin: 15px 0;
         }
 
         th,
         td {
-            border: 1px solid var(--border-color);
+            border: 1px solid #555;
             padding: 10px;
             text-align: left;
         }
 
         th {
-            background-color: #2a2a2a;
+            background-color: #3a3a3a;
         }
 
-        code {
-            background: #2a2a2a;
-            padding: 2px 6px;
-            border-radius: 4px;
-        }
-
-        .hidden {
-            display: none !important;
-        }
-
-        #loading {
-            text-align: center;
-            font-size: 18px;
-            color: var(--text-secondary);
-            display: none;
-        }
-
-        .plot-container {
-            background: white !important;
+        .chart-container {
+            background: white;
             padding: 10px;
-            border-radius: 8px;
-            margin-top: 10px;
+            border-radius: 6px;
+            margin: 15px 0;
         }
 
-        p em {
-            color: var(--text-secondary);
+        .flex-row {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+
+        .flex-chart {
+            flex: 1 1 45%;
+            min-width: 300px;
+        }
+
+        .note {
+            background: #333;
+            padding: 12px;
+            border-left: 4px solid #a0e75a;
+            margin: 20px 0;
+            font-size: 0.95em;
+        }
+
+        @media (max-width: 768px) {
+            .flex-row {
+                flex-direction: column;
+            }
         }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <h1>🚢 Titanic Dataset — Exploratory Data Analysis</h1>
+        <h1>🚢 Titanic Dataset Exploratory Data Analysis</h1>
 
-        <div class="card">
-            <h2>1. Data Load</h2>
-            <p>Upload the <code>train.csv</code> and <code>test.csv</code> files from the Kaggle Titanic dataset.</p>
-            <input type="file" id="train-file" accept=".csv" />
-            <label>Train CSV (without Survived)</label><br>
-            <input type="file" id="test-file" accept=".csv" />
-            <label>Test CSV (with Survived)</label><br>
-            <button onclick="loadData()">Load and Merge Data</button>
+        <div class="note">
+            <strong>Deployment Note:</strong> To deploy on GitHub Pages, push this <code>index.html</code> and
+            <code>app.js</code> to a public repo, then enable GitHub Pages in Settings (main branch, root folder).
         </div>
 
-        <div id="loading">Processing data...</div>
-
-        <div id="overview-section" class="card hidden">
-            <h2>2. Data Overview</h2>
-            <p><strong>Dataset shape:</strong> <span id="shape-text"></span></p>
-            <h3>First 10 Rows of Merged Data</h3>
-            <div id="preview-table"></div>
+        <!-- Section 1: Data Load -->
+        <div class="section">
+            <h2>1. 📥 Load Data</h2>
+            <p>Upload both <code>train.csv</code> and <code>test.csv</code> from the Kaggle Titanic competition.</p>
+            <label>Train Data (train.csv): <input type="file" id="trainFile" accept=".csv" /></label><br />
+            <label>Test Data (test.csv): <input type="file" id="testFile" accept=".csv" /></label><br />
+            <button id="loadDataBtn">Load & Merge Data</button>
         </div>
 
-        <div id="missing-section" class="card hidden">
-            <h2>3. Missing Values Analysis</h2>
-            <div id="missing-table"></div>
-            <div id="missing-chart" class="plot-container"></div>
+        <!-- Section 2: Overview -->
+        <div class="section">
+            <h2>2. 📊 Dataset Overview</h2>
+            <button id="showOverviewBtn">Show Overview</button>
+            <div id="overviewContent"></div>
         </div>
 
-        <div id="stats-section" class="card hidden">
-            <h2>4. Statistical Summary</h2>
-            <h3>Numeric Features Summary (Train Data)</h3>
-            <div id="numeric-stats"></div>
-
-            <h3>Pclass Value Counts (Train Data)</h3>
-            <div id="pclass-table"></div>
-
-            <h3>Sex Value Counts (Train Data)</h3>
-            <div id="sex-table"></div>
-
-            <h3>Embarked Value Counts (Train Data)</h3>
-            <div id="embarked-table"></div>
-
-            <h3>Survival Rate by Pclass (Train Data)</h3>
-            <div id="survival-pclass"></div>
-
-            <h3>Survival Rate by Sex (Train Data)</h3>
-            <div id="survival-sex"></div>
-
-            <h3>Survival Rate by Embarked (Train Data)</h3>
-            <div id="survival-embarked"></div>
+        <!-- Section 3: Missing Values -->
+        <div class="section">
+            <h2>3. ❓ Missing Values Analysis</h2>
+            <button id="showMissingBtn">Analyze Missing Values</button>
+            <div id="missingContent"></div>
         </div>
 
-        <div id="viz-section" class="card hidden">
-            <h2>5. Data Visualizations</h2>
-            <div id="survival-bar" class="plot-container"></div>
-            <div id="age-hist" class="plot-container"></div>
-            <div id="fare-box" class="plot-container"></div>
-            <div id="correlation-heatmap" class="plot-container"></div>
+        <!-- Section 4: Statistical Summary -->
+        <div class="section">
+            <h2>4. 📈 Statistical Summary (Train Set Only)</h2>
+            <button id="showStatsBtn">Generate Summary</button>
+            <div id="statsContent"></div>
         </div>
 
-        <div id="export-section" class="card hidden">
-            <h2>6. Export Results</h2>
-            <button onclick="exportMergedCSV()">Export Merged CSV</button>
-            <button onclick="exportMergedJSON()">Export Merged JSON</button>
-            <button onclick="exportSummaryText()">Export Summary as TXT</button>
+        <!-- Section 5: Visualizations -->
+        <div class="section">
+            <h2>5. 🖼️ Visualizations</h2>
+            <button id="showVizBtn">Generate Charts</button>
+            <div id="vizContent"></div>
+        </div>
+
+        <!-- Section 6: Export -->
+        <div class="section">
+            <h2>6. 💾 Export Results</h2>
+            <button id="exportCsvBtn">Export Merged CSV</button>
+            <button id="exportJsonBtn">Export JSON Summary</button>
+            <button id="exportReportBtn">Download Text Report</button>
+            <div id="exportStatus"></div>
         </div>
     </div>
 
